first attempt at html markup

--- a/fundraiser-meter/index.html
+++ b/fundraiser-meter/index.html
@@ -7,6 +7,21 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Fundraiser Meter</h1>
+    <div class="meter-component">
+      <h1 class="meter-component__title">Fundraiser Meter</h1>
+      <div class="diagram">
+        <div class="diagram__outer-circle">
+          <h3 class="diagram__outer-title">£100</h3>
+          <div class="diagram__inner-circle">
+            <h3 class="diagram__inner-title"></h3>
+          </div>
+        </div>
+      </div>
+      <div class="buttons">
+        <button type="button" class="buttons_button-small"></button>
+        <button type="button" class="buttons_button-medium"></button>
+        <button type="button" class="buttons_button-big"></button>
+      </div>
+    </div>
   </body>
 </html>
