most basic wireframe constructed in html and css

--- a/fundraiser-meter/index.html
+++ b/fundraiser-meter/index.html
@@ -13,14 +13,14 @@
         <div class="diagram__outer-circle">
           <h3 class="diagram__outer-title">£100</h3>
           <div class="diagram__inner-circle">
-            <h3 class="diagram__inner-title"></h3>
+            <h3 class="diagram__inner-title">£30</h3>
           </div>
         </div>
       </div>
-      <div class="buttons">
-        <button type="button" class="buttons_button-small"></button>
-        <button type="button" class="buttons_button-medium"></button>
-        <button type="button" class="buttons_button-big"></button>
+      <div class="form">
+        <button type="button" class="form_button form_button-small">£1</button>
+        <button type="button" class="form_button form_button-medium">£5</button>
+        <button type="button" class="form_button form_button-big">£10</button>
       </div>
     </div>
   </body>
