--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Fundraiser Meter</title>
-    <link rel="stylesheet" href="/css/master.css">
-    <script src="js/app.js" charset="utf-8"></script>
+    <!-- <link rel="stylesheet" href="/css/master.css">
+    <script src="js/app.js" charset="utf-8"></script> -->
+    <!-- inject:js -->
+    <script src="js/app.js"></script>
+    <!-- endinject -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- endinject -->
   </head>
   <body>
     <div class="meter-component">
