angular app and first controller initialised

--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="fundraiser">
   <head>
     <meta charset="utf-8">
     <title>Fundraiser Meter</title>
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-controller="MainCtrl as main">
     <div class="meter-component">
       <h1 class="meter-component__title">Fundraiser Meter</h1>
       <div class="diagram">
