--- a/fundraiser-meter/src/index.html
+++ b/fundraiser-meter/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="fundraiser">
   <head>
     <meta charset="utf-8">
     <title>Fundraiser Meter</title>
@@ -10,7 +10,7 @@
     <!-- inject:css -->
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-controller="MainCtrl as main">
     <div class="meter-component">
       <h1 class="meter-component__title">Fundraiser Meter</h1>
       <div class="diagram">
