slight refactor of controller code

--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -27,9 +27,9 @@
         </div>
       </div>
       <div class="form">
-        <button type="button" class="form_button form_button-small" ng-click="main.incrementRaised(1)">£1</button>
-        <button type="button" class="form_button form_button-medium" ng-click="main.incrementRaised(5)">£5</button>
-        <button type="button" class="form_button form_button-big" ng-click="main.incrementRaised(10)">£10</button>
+        <button type="button" class="form_button form_button-small" ng-click="main.incrementAmountRaised(1)">£1</button>
+        <button type="button" class="form_button form_button-medium" ng-click="main.incrementAmountRaised(5)">£5</button>
+        <button type="button" class="form_button form_button-big" ng-click="main.incrementAmountRaised(10)">£10</button>
       </div>
     </div>
   </body>
