api constant and Fund factory created on front end and now making requests to back end. Update isnt working

--- a/fundraiser-meter/src/index.html
+++ b/fundraiser-meter/src/index.html
@@ -30,5 +30,6 @@
         <button type="button" class="form_button form_button-big" ng-click="main.incrementAmountRaised(10)">£10</button>
       </div>
     </div>
+    {{ vm.fund}}
   </body>
 </html>
