--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -31,7 +31,9 @@
         <button type="button" class="form_button form_button-medium" ng-click="main.incrementAmountRaised(5)">£5</button>
         <button type="button" class="form_button form_button-big" ng-click="main.incrementAmountRaised(10)">£10</button>
       </div>
+      <div class="form">
+        <button type="button" class="form_button form_button-small" ng-click="main.resetFund()">Reset</button>
+      </div>
     </div>
-    {{ vm.fund}}
   </body>
 </html>
