component styling updated to match radial styling

--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -13,6 +13,8 @@
     <!-- endinject -->
   </head>
   <body ng-controller="MainCtrl as main">
+    <div class="buffer">
+    </div>
     <div class="meter-component">
       <div class="title-container">
         <div class="title-container__insert">
