--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -40,6 +40,7 @@
             </div>
           </div>
         </div>
+        <div class="trapezoid"></div>
       </div>
       <div class="form">
         <button type="button" class="form_button form_button-small" ng-click="main.incrementAmountRaised(1)">
