--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -32,6 +32,7 @@
           <div class="shadow"></div>
         </div>
         <div class="inset">
+          <p>Raised to far</p>
           <div class="percentage">
             <div class="numbers">
               <span>-</span>
@@ -39,7 +40,10 @@
             </div>
           </div>
         </div>
-        <div class="trapezoid"></div>
+        <div class="trapezoid">
+          <p>star</p>
+          <p>Goal: £{{main.fund.target}}</p>
+        </div>
       </div>
       <div class="form">
         <button type="button" class="form_button form_button-small" ng-click="main.incrementAmountRaised(1)">
