--- a/fundraiser-meter/public/index.html
+++ b/fundraiser-meter/public/index.html
@@ -32,7 +32,7 @@
           <div class="shadow"></div>
         </div>
         <div class="inset">
-          <p>Raised to far</p>
+          <p>Raised so far</p>
           <div class="percentage">
             <div class="numbers">
               <span>-</span>
