--- a/WebGL-indigo-code/index.html
+++ b/WebGL-indigo-code/index.html
@@ -10,6 +10,7 @@
 		</canvas>
 		<br/>
 		<i>Demo above this italic</i>
+		<script src="gl-matrix.js"></script>
 		<script src="app.js"></script>
 	</body>
 </html>
