streams, observables and observers from promises

--- a/rxjs_boiler/index.html
+++ b/rxjs_boiler/index.html
@@ -4,10 +4,13 @@
 	<title>RxJS Boiler</title>
 </head>
 <body>
-	<button id="btn">Click</button>
+  <input type="text" id="input">
+  <h1 id="name"></h1>
+  <hr>
+	<!--<button id="btn">Click</button>
 	<hr>
 	<input type="text" id="input" />
-	<div id="output"></div>
+	<div id="output"></div>-->
 	<script src="./dist/app.bundle.js"></script>
 </body>
 </html>
