--- a/rxjs_boiler/index.html
+++ b/rxjs_boiler/index.html
@@ -7,10 +7,10 @@
   <input type="text" id="input">
   <h1 id="name"></h1>
   <hr>
-	<!--<button id="btn">Click</button>
+	<button id="btn">Click</button>
 	<hr>
 	<input type="text" id="input" />
-	<div id="output"></div>-->
+	<div id="output"></div>
 	<script src="./dist/app.bundle.js"></script>
 </body>
 </html>
